--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 
 
 
-.carousel-bg{
+/* .carousel-bg{
   width: 100%;
   height: 500px;
-}
+} */
 .carousel-text{
   position: absolute;
   top: 200px;
