--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,63 @@
-*{
+* {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
   text-decoration: none;
   color: #000000;
-  font-family: 'Ubuntu', sans-serif;}
+  font-family: 'Ubuntu', sans-serif;
+}
 
 
+/* ////////////////////////Header///////////////// */
+.logo-div {}
 
-/* .carousel-bg{
-  width: 100%;
-  height: 500px;
-} */
-.carousel-text{
+.logo-img {
+  width: 75px;
+}
+
+
+.nav-links {
+  padding: 7px 7px 7px 7px;
+
+}
+
+.nav-links:hover {
+  background-color: #9d04565e;
+  border-radius: 10px;
+  box-shadow: 2px 3px 3px 2px #ae6f915f;
+
+}
+
+
+/* ////////////////////////Carousel/////////////////////////// */
+.carousel-text {
   position: absolute;
   top: 200px;
   margin: auto;
   text-shadow: 4px 4px 5px #000000;
 }
 
+.cornerspacing {
+  width: 90%;
+  padding: 50px;
+  margin: 50px;
+  background: rgb(255, 255, 255);
+  background-clip: content-box;
+  border: 1px #9d0455 solid;
 
-.logo-div{
-}
-.logo-img{
-  width: 75px;
+  clip-path: polygon(0 20%, 10px 20%, 10px 10px, 15% 10px, 15% 0, 
+     85% 0, 85% 10px, calc(100% - 10px) 10px, calc(100% - 10px) 20%, 100% 20%, 
+     100% 80%, calc(100% - 10px) 80%, calc(100% - 10px) calc(100% - 10px), 
+     85% calc(100% - 10px), 85% 100%, 15% 100%, 15% calc(100% - 10px), 
+     10px calc(100% - 10px), 10px 85%, 0 85%);
+
+  -webkit-clip-path: polygon(0 20%, 10px 20%, 10px 10px, 15% 10px, 15% 0, 85% 0, 
+     85% 10px, -webkit-calc(100% - 10px) 10px, -webkit-calc(100% - 10px) 20%, 
+     100% 20%, 100% 80%, -webkit-calc(100% - 10px) 80%, 
+     -webkit-calc(100% - 10px) -webkit-calc(100% - 10px), 
+     85% -webkit-calc(100% - 10px), 85% 100%, 15% 100%, 15% 
+     -webkit-calc(100% - 10px), 10px -webkit-calc(100% - 10px), 10px 85%, 0 85%);
+
 }
 
-
-.nav-links{
-  padding: 7px 7px 7px 7px;
-
-}
-.nav-links:hover{
-  background-color: #9d04565e;
-  border-radius: 10px;
-  box-shadow: 2px 3px 3px 2px #ae6f915f;
-  
-  
-  /* padding: 2px; */
-}
 
