--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0%;
   box-sizing: border-box;
   text-decoration: none;
-  color: #000000;
+  /* color: #000000; */
   font-family: 'Ubuntu', sans-serif;
 }
 
